---------------------------------------------------------------------------------------------------
Version: 0.2.16
Date: 27. 10. 2024
  Features:
    - Included "Extended" (3x Vanilla) start up settings for fluid wagon capacity, and max speeds. Thanks to H4ckerxx44 for the PR
  Bugfixes:
    - Reimplemented lighting/reflection graphics that were no longer accessible from update 2.0
  Balancing:
    - Efficiency powerpacks have significantly increased fuel value (120MJ -> 240MJ)
    - Standard powerpack refurbishment requires less (200 -> 20) sulfuric acid and less (120 -> 60 seconds) times.
    - Experiemental (Speed, Acceleration, Efficiency) powerpack refurbishment requires more (5 -> 10) battieres. 
---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 27. 10. 2024
  Info:
    - Updated build script for more efficient mod packaging (+ GH Actions)
    - Configured electric locomotives to support remote control feature from 2.0
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 25. 10. 2024
  Info:
    - Removed SE and K2 optional dependencies while they are not 2.0 compatible. Compatibility code has been preserved.
  Bugfixes:
    - Fixed issue where charging powerpacks would result in decay regardless of the startup setting.
    - Fixed issue where fluid wagon startup settings would not take effect.
  Quality of Life:
    - Added some code comments and refactored changelog for better categorization.
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 24. 10. 2024
  Info:
    - Renamed some scripts for developer sanity.
  Bugfixes:
    - Fixed bug where Electric Locomotive was available to craft before researching Electric Trains when Space Age was enabled.
---------------------------------------------------------------------------------------------------